--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
  <!--  section that has img for the profile pic -->
  <section>
-  <img src="./Assets/profilepic.jpeg" alt="pic" class=center>
+  <img src="./assets/profilepic.jpeg" alt="pic" class=center>
   <!-- content with in the section that has About me, work, section(has a list of skills ) -->
   <div class="content">
       <div id="aboutme" class="aboutme">
