--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   </header>
   <!-- section that has img for the profile pic -->
   <section>
-    <img src="./assets/profilepic.jpeg" alt="pic" style="width: 200px; height: 200px; border-radius: 50%;">   
-   
+    <img src="./assets/profilepic.jpeg" alt="pic" style="width: 200px; height: 200px; border-radius: 50%;">      
     <div class="content">
       <div id="aboutme" class="aboutme">
         <h2>About me</h2>
@@ -43,12 +42,11 @@
       </div>
       <div id="work" class="work">
         <h2>Work</h2>
-        <p>
-          My work is to test the applications and develop automation testing frameworks, releases, and deployments.
-        </p>
+        <!-- <p>
+          I am involved in the testing of applications and the development of automation testing frameworks, as well as managing releases and deployments.        </p> -->
         <div>
-          <h3>Projects:</h3>
           <p><a href="https://evelynms1.github.io/workout-routine-app/">Workout Routine App</a></p>
+          <p><a href="https://github.com/bbandhu/Applied-Data-Science-Capstone/blob/master/ds-capstone-coursera%20.pptx.pdf">Winning space race with DataScience</a></p>
         </div>
       </div>
       <div id="skills" class="skills">
@@ -63,6 +61,7 @@
           <li>WebDriver.IO</li>
           <li>Selenium WebDriver</li>
           <li>MySQL</li>
+          <li>JavaScript</li>
         </ul>
       </div>
     </div>
