--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
                             <p><a href="https://github.com/JDempe/WanderList">Wanderlist</a></p>
                         </div>
                     </div>
-                    <div id="skills" class="skills">
-                        <h2>Skills</h2>
-                        <ul class="list-unstyled">
-                            <li>Java</li>
-                            <li>Python</li>
-                            <li>Protractor</li>
-                            <li>AWS</li>
-                            <li>Cypress.io</li>
-                            <li>Spring Boot</li>
-                            <li>WebDriver.IO</li>
-                            <li>Selenium WebDriver</li>
-                            <li>MySQL</li>
-                            <li>JavaScript</li>
-                        </ul>
+                    <div class="container">
+                      <h2>Skills</h2>
+                      <ul>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>Protractor</li>
+                        <li>AWS</li>
+                        <li>Cypress.io</li>
+                        <li>Spring Boot</li>
+                        <li>WebDriver.IO</li>
+                        <li>Selenium WebDriver</li>
+                        <li>MySQL</li>
+                        <li>JavaScript</li>
+                      </ul>
                     </div>
                 </div>
             </div>
