--- a/index.html
+++ b/index.html
@@ -66,16 +66,11 @@
                     <div class="container">
                       <h2>Skills</h2>
                       <ul>
-                        <li>Java</li>
-                        <li>Python</li>
-                        <li>Protractor</li>
-                        <li>AWS</li>
-                        <li>Cypress.io</li>
-                        <li>Spring Boot</li>
-                        <li>WebDriver.IO</li>
-                        <li>Selenium WebDriver</li>
-                        <li>MySQL</li>
-                        <li>JavaScript</li>
+                        <li>Programming Languages: Java, Python, JavaScript</li>
+                        <li>Testing Frameworks: Protractor, Cypress.io, WebDriver.IO, Selenium WebDriver</li>
+                        <li>Web Development:Spring Boot, JavaScript, Node, Express, HTML, CSS </li>
+                        <li>Database: MySQL, PostgressSQL, MongoDB</li>
+                        <li>Cloud Services: AWS</li>
                       </ul>
                     </div>
                 </div>
