--- a/index.html
+++ b/index.html
@@ -70,8 +70,18 @@
                         <li>Testing Frameworks: Protractor, Cypress.io, WebDriver.IO, Selenium WebDriver</li>
                         <li>Web Development:Spring Boot, JavaScript, Node, Express, HTML, CSS </li>
                         <li>Database: MySQL, PostgressSQL, MongoDB</li>
-                        <li>Cloud Services: AWS</li>
+                        <li>Cloud Services: AWS, Heroku, </li>
                       </ul>
+                    </div>
+                    <div class="container">
+                      <h2>Badges</h2>
+                      <div class="row">
+                        <div class="col-md-4">
+                          <a href="https://www.credly.com/badges/db1c60a2-366c-4399-94ad-ebc4ada8c2b3/public_url" target="_blank">
+                            <img src="/assets/Badge.png" alt="Data Science Professional Certificate (V2)">
+                          </a>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
