--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <li>Testing Frameworks: Protractor, Cypress.io, WebDriver.IO, Selenium WebDriver</li>
                         <li>Web Development:Spring Boot, JavaScript, Node, Express, HTML, CSS </li>
                         <li>Database: MySQL, PostgressSQL, MongoDB</li>
-                        <li>Cloud Services: AWS, Heroku, </li>
+                        <li>Cloud Services: AWS, Heroku </li>
                       </ul>
                     </div>
                     <div class="container">
