added background img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style.css" />
+  <style>
+    body {
+      background-image: url("./assets/Background.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
 </head>
 <!-- Header with name and nav bar that has links to aboutme, work, skills -->
 <body>
