--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                             <p><a href="https://github.com/JDempe/WanderList">Wanderlist</a></p>
                         </div>
                     </div>
-                    <div class="container">
                       <h2>Skills</h2>
                       <ul>
                         <li>Programming Languages: Java, Python, JavaScript</li>
@@ -79,17 +78,14 @@
                         <li>Database: MySQL, PostgressSQL, MongoDB</li>
                         <li>Cloud Services: AWS, Heroku </li>
                       </ul>
-                    </div>
-                    <div class="container">
                       <h2>Badges</h2>
                       <div class="row">
                         <div class="col-md-4">
                           <a href="https://www.credly.com/badges/db1c60a2-366c-4399-94ad-ebc4ada8c2b3/public_url" target="_blank">
-                            <img src="/assets/Badge.png" alt="Data Science Professional Certificate (V2)">
+                            <img src="./assets/Badge.png" alt="Data Science Professional Certificate (V2)">
                           </a>
                         </div>
                       </div>
-                    </div>
                 </div>
             </div>
         </div>
