--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                       <h2>Skills</h2>
-                      <ul>
+                      <ul id="skills">
                         <li>Programming Languages: Java, Python, JavaScript</li>
                         <li>Testing Frameworks: Protractor, Cypress.io, WebDriver.IO, Selenium WebDriver</li>
                         <li>Web Development:Spring Boot, JavaScript, Node, Express, HTML, CSS </li>
